--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       background: #181820;
       color: #fff;
     }
-    /* --- HEADER + NAV (unchanged) --- */
+    /* --- HEADER + NAV --- */
     header {
       position: absolute;
       width: 100%;
@@ -266,108 +266,107 @@
     .footer-links a:hover {
       color: #fff;
     }
+    /* --- Responsive mobile adjustments --- */
     @media (max-width: 900px) {
-      .footer-top, .footer-bottom {
-        max-width: 99vw;
+      header img {
+        height: 58px;
+        margin-left: 0.5rem;
+        margin-top: 1rem;
       }
-      .footer-main { padding: 1.2rem 0.2rem 0.73rem 0.2rem; }
+      nav {
+        gap: 1rem;
+        padding-right: 0.5rem;
+        margin-top: 1rem;
+        font-size: 0.95rem;
+      }
+      .hero {
+        padding-left: 1rem;
+      }
+      .hero-content {
+        max-width: 100vw;
+        padding-right: 1rem;
+      }
+      section {
+        border-radius: 9px;
+        padding: 1rem 1rem;
+        max-width: 100vw;
+        margin: 1rem 0;
+      }
+      .footer-main, .footer-bottom, .footer-top {
+        max-width: 100vw;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+      }
     }
     @media (max-width: 700px) {
+      header img {
+        height: 36px;
+        margin-left: 0.3rem;
+        margin-top: 0.5rem;
+      }
+      nav {
+        gap: 0.5rem;
+        font-size: 0.9rem;
+        padding-right: 0.2rem;
+        flex-wrap: wrap;
+      }
+      .hero {
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+      }
+      .hero h1 {
+        font-size: 1.6rem;
+      }
+      section {
+        border-radius: 6px;
+        padding: 0.8rem 0.8rem;
+        font-size: 0.95em;
+        max-width: 100vw;
+        margin: 1rem 0;
+      }
       .footer-top {
         flex-direction: column;
-        gap: 1.25rem;
+        align-items: flex-start;
+        gap: 1rem;
         text-align: left;
+        padding-bottom: 0.5rem;
+        margin-bottom: 0.8rem;
       }
-      .footer-main, .footer-bottom { padding: 1.15rem 0.1rem 0.45rem 0.1rem;}
+      .footer-col {
+        min-width: unset;
+        width: 100%;
+      }
+      .footer-main, .footer-bottom {
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
+        font-size: 0.9em;
+      }
+      .footer-bottom {
+        flex-direction: column;
+        gap: 0.6em;
+        text-align: left;
+        align-items: flex-start;
+      }
     }
-    @media (max-width: 450px) {
-      .footer-top, .footer-bottom { font-size: 0.93em; }
-      .footer-links a { margin: 0 0.5em 0 0; }
+    @media (max-width: 420px) {
+      .hero h1 {
+        font-size: 1.2rem;
+      }
+      nav {
+        font-size: 0.85rem;
+        gap: 0.4rem;
+      }
+      section {
+        font-size: 0.9em;
+        padding: 0.6rem 0.6rem;
+      }
+      .footer-bottom {
+        font-size: 0.9em;
+      }
+      .footer-links a {
+        margin: 0 0.4em 0 0;
+      }
     }
-    @media (max-width: 900px) {
-  header img {
-    height: 58px;
-    margin-left: 1rem;
-    margin-top: 1.1rem;
-  }
-  nav {
-    gap: 1.1rem;
-    padding-right: 1rem;
-    margin-top: 1.1rem;
-    font-size: 0.98rem;
-  }
-  .hero {
-    padding-left: 1rem;
-  }
-  .hero-content {
-    max-width: 99vw;
-  }
-  section {
-    border-radius: 9px;
-    padding: 1.2rem .6rem;
-    max-width: 98vw;
-  }
-  .footer-main, .footer-bottom, .footer-top {
-    max-width: 100vw;
-    padding-left: 0.3rem;
-    padding-right: 0.3rem;
-  }
-}
-@media (max-width: 700px) {
-  header img {
-    height: 36px;
-    margin-left: .17rem;
-    margin-top: .55rem;
-  }
-  nav {
-    gap: 0.55rem;
-    font-size: .93rem;
-    padding-right: 0.2rem;
-    flex-wrap: wrap;
-  }
-  .hero {
-    padding-left: 0.4rem;
-  }
-  .hero h1 {
-    font-size: 2rem;
-  }
-  section {
-    border-radius: 4px;
-    padding: .7rem .12rem;
-    font-size: .95em;
-    max-width: 99vw;
-  }
-  .footer-top {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1.2rem;
-    text-align: left;
-    padding-bottom: .45rem;
-    margin-bottom: .6rem;
-  }
-  .footer-col {
-    min-width: unset;
-    width: 100%;
-  }
-  .footer-main, .footer-bottom {
-    padding-left: .10rem;
-    padding-right: .10rem;
-    font-size: .95em;
-  }
-  .footer-bottom {
-    flex-direction: column;
-    gap: .5em;
-    text-align: left;
-    align-items: flex-start;
-  }
-}
-@media (max-width: 420px) {
-  .hero h1 { font-size: 1.12rem; }
-  nav { font-size: .87rem; }
-  section { font-size: .9em; }
-  .footer-bottom { font-size: .91em; }
-}
-
   </style>
 </head>
 <body>
@@ -523,6 +522,7 @@
   </script>
 </body>
 </html>
+
 
 
 
