--- a/Services.html
+++ b/Services.html
@@ -205,7 +205,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <a href="#" class="dropbtn">Resources</a>
+        <a href="Resources.html" class="dropbtn">Resources</a>
         <div class="dropdown-content">
           <a href="#">Home Loan Calculators</a>
           <a href="#">Lender Panel</a>
