--- a/about.html
+++ b/about.html
@@ -369,7 +369,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <a href="#resources" class="dropbtn">Resources</a>
+        <a href="resources.html" class="dropbtn">Resources</a>
         <div class="dropdown-content">
           <a href="#calculators">Home Loan Calculators</a>
           <a href="#lender-panel">Lender Panel</a>
