--- a/contact.html
+++ b/contact.html
@@ -327,7 +327,7 @@
         </div>
       </div>
       <div class="dropdown">
-        <a href="#" class="dropbtn">Resources</a>
+        <a href="resources.html" class="dropbtn">Resources</a>
         <div class="dropdown-content">
           <a href="#">Home Loan Calculators</a>
           <a href="#">Lender Panel</a>
