--- a/resources.html
+++ b/resources.html
@@ -560,10 +560,11 @@
           <div class="resource-desc">Compare different loan options side-by-side to find the best fit for you.</div>
         </div>
         <div class="resource-card">
-          <div class="resource-icon"><i class="ri-savings-line"></i></div>
-          <div class="resource-title">Offset Calculator</div>
-          <div class="resource-desc">See how an offset account can reduce interest and save you money.</div>
-        </div>
+  <div class="resource-icon"><i class="ri-money-dollar-box-line"></i></div>
+  <div class="resource-title">Offset Calculator</div>
+  <div class="resource-desc">See how an offset account can reduce interest and save you money.</div>
+</div>
+
         <div class="resource-card">
           <div class="resource-icon"><i class="ri-file-chart-line"></i></div>
           <div class="resource-title">Refinance Calculator</div>
