--- a/Services.html
+++ b/Services.html
@@ -219,23 +219,64 @@
   <main>
     <section class="services-section">
       <h1>Our Services</h1>
-      <div class="services-animated">
-        <div class="service-card">
-          <div class="service-icon"><i class="ri-home-4-line"></i></div>
-          <div class="service-title">Home Loans</div>
-          <div class="service-desc">Residential and commercial home loan solutions from 60+ lenders, tailored to you.</div>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="ri-building-2-line"></i></div>
-          <div class="service-title">Property Advisory</div>
-          <div class="service-desc">Expert advice for buying, selling, or investing—helping you succeed with confidence.</div>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="ri-car-line"></i></div>
-          <div class="service-title">Asset Finance</div>
-          <div class="service-desc">Finance for vehicles, business equipment, and assets—fast approvals and fair rates.</div>
-        </div>
-      </div>
+     <div class="services-animated">
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-building-2-line"></i></div>
+    <div class="service-title">Commercial Finance</div>
+    <div class="service-desc">Making business decisions is simple when you’re getting the right advice from your entourage.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-team-line"></i></div>
+    <div class="service-title">SMSF Finance</div>
+    <div class="service-desc">Entourage will help you to get the best deal on your SMSF loan.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-map-pin-2-line"></i></div>
+    <div class="service-title">Construction Finance</div>
+    <div class="service-desc">Making business decisions is simple when you’re getting the right advice from your entourage.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-map-pin-2-line"></i></div>
+    <div class="service-title">Development Site</div>
+    <div class="service-desc">Making business decisions is simple when you’re getting the right advice from your entourage.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-home-4-line"></i></div>
+    <div class="service-title">Doctor Home Loans</div>
+    <div class="service-desc">Having an entourage makes it easier for doctors to buy residential and commercial property.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-building-3-line"></i></div>
+    <div class="service-title">Professional Athlete Home Loans</div>
+    <div class="service-desc">Having an entourage makes it easier for athletes to buy residential and commercial property.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-home-4-line"></i></div>
+    <div class="service-title">Lawyer Home Loans</div>
+    <div class="service-desc">Having an entourage makes it easier for lawyers to buy residential and commercial property.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-home-4-line" style="opacity:.33"></i></div>
+    <div class="service-title" style="opacity:.33">First Home Buyer</div>
+    <div class="service-desc" style="opacity:.65">Having an entourage makes it easier to buy your first home and get the right loan for your needs.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-home-7-line"></i></div>
+    <div class="service-title">Next Home Buyer</div>
+    <div class="service-desc">When it’s time to upgrade your home, Entourage is by your side making it easy and saving you time.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-coins-line"></i></div>
+    <div class="service-title">Investor</div>
+    <div class="service-desc">Having an entourage means making the right decisions when buying your investment property.</div>
+  </div>
+  <div class="service-card">
+    <div class="service-icon"><i class="ri-refund-2-line"></i></div>
+    <div class="service-title">Refinancing</div>
+    <div class="service-desc">Refinancing is easy when you have an entourage to negotiate on your behalf with the lenders.</div>
+  </div>
+</div>
+
     </section>
   </main>
   <script>
