--- a/Services.html
+++ b/Services.html
@@ -257,8 +257,8 @@
   </div>
   <div class="service-card">
     <div class="service-icon"><i class="ri-home-4-line"></i></div>
-    <div class="service-title" style="opacity:.33">First Home Buyer</div>
-    <div class="service-desc" style="opacity:.65">Having an entourage makes it easier to buy your first home and get the right loan for your needs.</div>
+    <div class="service-title">First Home Buyer</div>
+    <div class="service-desc">Having an entourage makes it easier to buy your first home and get the right loan for your needs.</div>
   </div>
   <div class="service-card">
     <div class="service-icon"><i class="ri-home-7-line"></i></div>
