--- a/Services.html
+++ b/Services.html
@@ -249,6 +249,7 @@
     <div class="service-icon"><i class="ri-team-line"></i></div>
     <div class="service-title">SMSF Finance</div>
     <div class="service-desc">Entourage will help you to get the best deal on your SMSF loan.</div>
+  </div>
   <div class="service-card">
     <div class="service-icon"><i class="ri-map-pin-2-line"></i></div>
     <div class="service-title">Development Site</div>
@@ -264,7 +265,7 @@
     <div class="service-title">Lawyer Home Loans</div>
     <div class="service-desc">Having an entourage makes it easier for lawyers to buy residential and commercial property.</div>
   </div>
-      <div class="service-card">
+    <div class="service-card">
     <div class="service-icon"><i class="ri-building-3-line"></i></div>
     <div class="service-title">Professional Athlete Home Loans</div>
     <div class="service-desc">Having an entourage makes it easier for athletes to buy residential and commercial property.</div>
