--- a/resources.html
+++ b/resources.html
@@ -499,16 +499,16 @@
       <div class="dropdown">
         <button class="dropbtn">Services</button>
         <div class="dropdown-content">
-          <a href="Services.html#home-loans">Home Loans</a>
-          <a href="Services.html#property-advisory">Property Advisory</a>
-          <a href="Services.html#asset-finance">Asset Finance</a>
+          <a href="Services.html">Home Loans</a>
+          <a href="Services.html">Property Advisory</a>
+          <a href="Services.html">Asset Finance</a>
         </div>
       </div>
       <div class="dropdown">
         <button class="dropbtn">About</button>
         <div class="dropdown-content">
-          <a href="about.html#mission">Company Mission</a>
-          <a href="about.html#team">Meet Our Team</a>
+          <a href="about.html">Company Mission</a>
+          <a href="about.html">Meet Our Team</a>
         </div>
       </div>
       <div class="dropdown">
