--- a/resources.html
+++ b/resources.html
@@ -491,39 +491,39 @@
   </style>
 </head>
 <body>
-  <header>
+    <header>
     <a href="index.html">
       <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     </a>
     <nav>
       <div class="dropdown">
-        <button class="dropbtn">Services</button>
+        <a href="Services.html" class="dropbtn">Services</a>
         <div class="dropdown-content">
-          <a href="Services.html">Home Loans</a>
-          <a href="Services.html">Property Advisory</a>
-          <a href="Services.html">Asset Finance</a>
+          <a href="Services.html#home-loans">Home Loans</a>
+          <a href="Services.html#property-advisory">Property Advisory</a>
+          <a href="Services.html#asset-finance">Asset Finance</a>
         </div>
       </div>
       <div class="dropdown">
-        <button class="dropbtn">About</button>
+        <a href="about.html" class="dropbtn">About</a>
         <div class="dropdown-content">
           <a href="about.html">Company Mission</a>
           <a href="about.html">Meet Our Team</a>
         </div>
       </div>
       <div class="dropdown">
-        <button class="dropbtn">Partners</button>
+        <a href="#" class="dropbtn">Partners</a>
         <div class="dropdown-content">
           <a href="#">Coming Soon</a>
         </div>
       </div>
       <div class="dropdown">
-        <button class="dropbtn">Resources</button>
+        <a href="resources.html" class="dropbtn">Resources</a>
         <div class="dropdown-content">
-          <a href="#calculators">Home Loan Calculators</a>
-          <a href="#lender-panel">Lender Panel</a>
-          <a href="#blogs">Blogs</a>
-          <a href="#faqs">FAQs</a>
+          <a href="#">Home Loan Calculators</a>
+          <a href="#">Lender Panel</a>
+          <a href="#">Blogs</a>
+          <a href="#">FAQs</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
