--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@
       <div class="dropdown">
         <a href="#partners" class="dropbtn">Partners</a>
         <div class="dropdown-content">
-          <a href="#">Coming Soon</a>
+          <a href="resources.html#lender-panel">Coming Soon</a>
         </div>
       </div>
       <div class="dropdown">
