--- a/Services.html
+++ b/Services.html
@@ -179,27 +179,25 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
-      <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-    </a>
+    <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     <nav>
       <div class="dropdown">
         <a href="Services.html" class="dropbtn">Services</a>
         <div class="dropdown-content">
-          <a href="Services.html#home-loans">Home Loans</a>
-          <a href="Services.html#property-advisory">Property Advisory</a>
-          <a href="Services.html#asset-finance">Asset Finance</a>
+          <a href="Services.html">Home Loans</a>
+          <a href="Services.html">Property Advisory</a>
+          <a href="Services.html">Asset Finance</a>
         </div>
       </div>
       <div class="dropdown">
         <a href="about.html" class="dropbtn">About</a>
         <div class="dropdown-content">
-          <a href="about.html">Company Mission</a>
-          <a href="about.html">Meet Our Team</a>
+          <a href="about.html#mission">Company Mission</a>
+          <a href="about.html#team">Meet Our Team</a>
         </div>
       </div>
       <div class="dropdown">
-        <a href="#" class="dropbtn">Partners</a>
+        <a href="#partners" class="dropbtn">Partners</a>
         <div class="dropdown-content">
           <a href="#">Coming Soon</a>
         </div>
@@ -207,10 +205,10 @@
       <div class="dropdown">
         <a href="resources.html" class="dropbtn">Resources</a>
         <div class="dropdown-content">
-          <a href="#">Home Loan Calculators</a>
-          <a href="#">Lender Panel</a>
-          <a href="#">Blogs</a>
-          <a href="#">FAQs</a>
+          <a href="resources.html#calculators">Home Loan Calculators</a>
+          <a href="resources.html#lender-panel">Lender Panel</a>
+          <a href="resources.html#blogs">Blogs</a>
+          <a href="resources.html#faqs">FAQs</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
