--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
   </style>
   <script>
   // Define your mobile site URL (change to your actual mobile site URL)
-  const mobileSiteUrl = "https://m.yoursite.com";
+  const mobileSiteUrl = "https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileindex.html";
 
   // Check if already on mobile redirect site to prevent loops
-  const isOnMobileSite = window.location.href.includes("m.yoursite.com");
+  const isOnMobileSite = window.location.href.includes("https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileindex.html");
 
   // Detect mobile viewport width & redirect accordingly
   if (window.matchMedia("(max-width: 768px)").matches && !isOnMobileSite) {
